# loguru-rich-sink

./: README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
src/loguru_rich_sink/: __init__.py  __main__.py  sink.py  test.py
tests/: test_sink.py
