[project]
name = "loguru-rich-sink"
version = "0.0.4"
description = "A loguru sink that uses rich to format log messages."
authors = [
    { name = "Max Ludden", email = "dev@maxludden.com" }
]
dependencies = [
    "rich>=14.2.0",
    "mypy>=1.11.2",
    "rich-gradient>=0.3.4",
    "loguru>=0.7.3",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.scripts]
"loguru-rich-sink" = "loguru_rich_sink:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[dependency-groups]
dev = ["ruff"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loguru_rich_sink"]

[tool.mypy]
ignore_missing_imports = true
